src/objects/DM_Request__c.object
<CustomObject>
    <description>Case: Track the DM Request. This is also used by Campaign for bulk DM Request</description>
    <fields>
        <fullName>Actual_DM_Material1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Actual DM Material1</label>
        <referenceTo>DM_Material__c</referenceTo>
        <relationshipLabel>DM Request (Actual DM Material1)</relationshipLabel>
        <relationshipName>DM_Fulfill</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Actual_DM_Material2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Actual DM Material2</label>
        <referenceTo>DM_Material__c</referenceTo>
        <relationshipLabel>DM Request (Actual DM Material2)</relationshipLabel>
        <relationshipName>DM_Fulfill1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Actual_DM_Material3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Actual DM Material3</label>
        <referenceTo>DM_Material__c</referenceTo>
        <relationshipLabel>DM Request (Actual DM Material3)</relationshipLabel>
        <relationshipName>DM_Fulfill2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Additional_Address__c</fullName>
        <label>Additional Address</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address_TH__c</fullName>
        <formula>IF(Customer_Name__r.Primary_Address_Reference__r.HouseNumber__c != null, Customer_Name__r.Primary_Address_Reference__r.HouseNumber__c+ &apos;,&apos;, &apos;&apos;) + IF(Customer_Name__r.Primary_Address_Reference__r.Address_Line_1__c != null, Customer_Name__r.Primary_Address_Reference__r.Address_Line_1__c + &apos;,&apos;, &apos;&apos;) + IF(Customer_Name__r.Primary_Address_Reference__r.Address_Line_2__c != null, Customer_Name__r.Primary_Address_Reference__r.Address_Line_2__c + &apos;,&apos;, &apos;&apos;) + IF(Text(Customer_Name__r.Primary_Address_Reference__r.Province__c) != null, Text(Customer_Name__r.Primary_Address_Reference__r.Province__c) + &apos;,&apos;, &apos;&apos;) + Customer_Name__r.Primary_Address_Reference__r.ZipCode__c</formula>
        <label>Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address__c</fullName>
        <label>Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AfterSales_Department__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Manager will pick up the record and forward it for approval based on this &apos;AfterSales&apos; checkbox.</description>
        <label>AfterSales Department</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Allow_Data_Sharing__c</fullName>
        <defaultValue>true</defaultValue>
        <description>The flag to identify if this record can be shared with MBJ</description>
        <label>Allow Data Sharing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Assigned_Dealer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Assigned Dealer</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordType.Name</field>
                <operation>equals</operation>
                <value>Dealer</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>DM Request (Assigned Dealer)</relationshipLabel>
        <relationshipName>DM_Request1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Attention__c</fullName>
        <label>Attention</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Campaign__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Campaign</label>
        <referenceTo>Campaign</referenceTo>
        <relationshipLabel>DM Request</relationshipLabel>
        <relationshipName>DM_Request</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Car_Model__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>/*
Created by:  Chris.Huang
Used by:  CAC User
Function: Mapping &apos;Related vehicles&apos; in Data Dictionary.
Used in: Integration

Modify History
Modify By: 
Modify Reason: 
*/</description>
        <label>Car Model</label>
        <referenceTo>Car_Model__c</referenceTo>
        <relationshipLabel>DM Request</relationshipLabel>
        <relationshipName>DM_Request</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Case_Number__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Case Number</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Please select Case that is linked to the same account as this DM Request.</errorMessage>
            <filterItems>
                <field>Case.AccountId</field>
                <operation>equals</operation>
                <valueField>$Source.Customer_Name__c</valueField>
            </filterItems>
            <infoMessage>Search and select case.</infoMessage>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>DM Request</relationshipLabel>
        <relationshipName>DM_Request</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Channel__c</fullName>
        <label>Touch Point</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Dealer Outlet</fullName>
                </value>
                <value>
                    <fullName>Mercedes Call Catalogue</fullName>
                </value>
                <value>
                    <fullName>Mercedes call</fullName>
                </value>
                <value>
                    <fullName>Maybach call</fullName>
                </value>
                <value>
                    <fullName>Mercedes-Benz School of Excelence</fullName>
                </value>
                <value>
                    <fullName>Mercedes-Benz Owner Hotline</fullName>
                </value>
                <value>
                    <fullName>English Customer Desk</fullName>
                </value>
                <value>
                    <fullName>24 hours Touring Support</fullName>
                </value>
                <value>
                    <fullName>Mercedes-Benz phone</fullName>
                </value>
                <value>
                    <fullName>Model-Year Reference desk</fullName>
                </value>
                <value>
                    <fullName>Dealers</fullName>
                </value>
                <value>
                    <fullName>Recall desk</fullName>
                </value>
                <value>
                    <fullName>Survey</fullName>
                </value>
                <value>
                    <fullName>Event</fullName>
                </value>
                <value>
                    <fullName>Campaign</fullName>
                </value>
                <value>
                    <fullName>Letter</fullName>
                </value>
                <value>
                    <fullName>Letter to Executive</fullName>
                </value>
                <value>
                    <fullName>Response Sheet</fullName>
                </value>
                <value>
                    <fullName>Email</fullName>
                </value>
                <value>
                    <fullName>Mercedes Magazine Survey</fullName>
                </value>
                <value>
                    <fullName>My Mercedes</fullName>
                </value>
                <value>
                    <fullName>DSC</fullName>
                </value>
                <value>
                    <fullName>Mercedes me Tokyo&amp;Osaka</fullName>
                </value>
                <value>
                    <fullName>Mercedes Me Haneda</fullName>
                </value>
                <value>
                    <fullName>Outbound Call</fullName>
                </value>
                <value>
                    <fullName>MCare</fullName>
                </value>
                <value>
                    <fullName>Others</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Comment__c</fullName>
        <label>Comment</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>DM Request</relationshipLabel>
        <relationshipName>DM_Request</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Created_By_EP_Transaction__c</fullName>
        <label>Created By EP Transaction</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Customer</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Please select the proper account.</errorMessage>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>Company, Person Account, Person Account Manual Merge, Person Account Soft Deleted</value>
            </filterItems>
            <infoMessage>Search and select account.</infoMessage>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>DM Request</relationshipLabel>
        <relationshipName>DM_Request</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DM_Request_External_Id__c</fullName>
        <externalId>true</externalId>
        <label>DM Request External Id</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <description>/*
Created by:  Chris.Huang
Used by:  CAC User
Function: Mapping &apos;Planned delivery date&apos; in Data Dictionary.
Used in: Integration

Modify History
Modify By: 
Modify Reason: 
*/</description>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Delivery_Type__c</fullName>
        <label>Delivery Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                    <default>true</default>
                    <label>1</label>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <description>This field is created for DM request related list in account detail page.</description>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Expected_DM_Material1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Expected DM Material1</label>
        <referenceTo>DM_Material__c</referenceTo>
        <relationshipLabel>DM Request (Expected DM Material1)</relationshipLabel>
        <relationshipName>DM_Request2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Expected_DM_Material2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Expected DM Material2</label>
        <referenceTo>DM_Material__c</referenceTo>
        <relationshipLabel>DM Request (Expected DM Material2)</relationshipLabel>
        <relationshipName>DM_Request3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Expected_DM_Material3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Expected DM Material3</label>
        <referenceTo>DM_Material__c</referenceTo>
        <relationshipLabel>DM Request (Expected DM Material3)</relationshipLabel>
        <relationshipName>DM_Request4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>First_Name__c</fullName>
        <formula>IF( Customer_Name__r.MD__c = &apos;TH&apos;, Customer_Name__r.FirstName, &apos;&apos;)</formula>
        <label>First Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Gender__c</fullName>
        <description>This field is used for display account gender field in DM request.</description>
        <formula>CASE(Customer_Name__r.Gender__c, &quot;Male&quot;, &quot;Male&quot;, &quot;Female&quot;, &quot;Female&quot;,&quot;&quot;)</formula>
        <label>Gender</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Name__c</fullName>
        <formula>IF( Customer_Name__r.MD__c  = &apos;TH&apos;, Customer_Name__r.LastName, &apos;&apos;)</formula>
        <label>Last Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lead</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Please select Leads that is linked to the same account as this DM Request.</errorMessage>
            <filterItems>
                <field>Lead__c.Contact__c</field>
                <operation>equals</operation>
                <valueField>$Source.Customer_Name__c</valueField>
            </filterItems>
            <infoMessage>Search and select leads.</infoMessage>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Lead__c</referenceTo>
        <relationshipLabel>DM Request</relationshipLabel>
        <relationshipName>DM_Request</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MBK_Channel__c</fullName>
        <label>MBK Channel</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>24 hours Touring Support</fullName>
                </value>
                <value>
                    <fullName>Campaign</fullName>
                </value>
                <value>
                    <fullName>Dealers</fullName>
                </value>
                <value>
                    <fullName>Email</fullName>
                </value>
                <value>
                    <fullName>Event</fullName>
                </value>
                <value>
                    <fullName>Letter</fullName>
                </value>
                <value>
                    <fullName>MB Connection</fullName>
                </value>
                <value>
                    <fullName>Mercedes Magazine Survey</fullName>
                </value>
                <value>
                    <fullName>Mercedes call</fullName>
                </value>
                <value>
                    <fullName>My Mercedes</fullName>
                </value>
                <value>
                    <fullName>Others</fullName>
                </value>
                <value>
                    <fullName>Outbound Call</fullName>
                </value>
                <value>
                    <fullName>Survey</fullName>
                </value>
                <value>
                    <fullName>Showroom</fullName>
                </value>
                <value>
                    <fullName>StarClass</fullName>
                </value>
                <value>
                    <fullName>Circle of excellence</fullName>
                </value>
                <value>
                    <fullName>MercedesCard</fullName>
                </value>
                <value>
                    <fullName>Mercedes Me</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MBTH_Channel__c</fullName>
        <label>MBTH Channel</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>IB Call</fullName>
                </value>
                <value>
                    <fullName>Event</fullName>
                </value>
                <value>
                    <fullName>Campaign</fullName>
                </value>
                <value>
                    <fullName>Add Social Media</fullName>
                </value>
                <value>
                    <fullName>Email</fullName>
                </value>
                <value>
                    <fullName>Online</fullName>
                </value>
                <value>
                    <fullName>Others.</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MD__c</fullName>
        <defaultValue>IF(ISPICKVAL($User.Market__c, &apos;AU&apos;) ,&apos;AU&apos;, 
IF(ISPICKVAL($User.Market__c, &apos;CN&apos;), &apos;CN&apos;, 
IF(ISPICKVAL($User.Market__c, &apos;KR&apos;), &apos;KR&apos;, 
IF(ISPICKVAL($User.Market__c, &apos;JP&apos;), &apos;JP&apos;,
IF(ISPICKVAL($User.Market__c, &apos;TH&apos;), &apos;TH&apos;,&apos;NA&apos;)))))</defaultValue>
        <label>Market Discriminator</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Marketing_Department__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Manager will pick up the record and forward it for approval based on this &apos;Marketing&apos; checkbox.</description>
        <label>Marketing Department</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Mobile__c</fullName>
        <formula>Contact__r.MobilePhone</formula>
        <label>Mobile</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Office_Phone__c</fullName>
        <formula>Customer_Name__r.Phone</formula>
        <label>Office Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Address__c</fullName>
        <formula>Customer_Name__r.Primary_Address__c</formula>
        <label>Primary Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Province__c</fullName>
        <label>Province</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Receipient_Name__c</fullName>
        <label>Receipient Name</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Retail_Campaign__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Retail Campaign</label>
        <referenceTo>Retail_Campaign__c</referenceTo>
        <relationshipLabel>DM Request</relationshipLabel>
        <relationshipName>DM_Request</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sales_Department__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Manager will pick up the record and forward it for approval based on this &apos;Sales&apos; checkbox.</description>
        <label>Sales Department</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Second_Mobile__c</fullName>
        <formula>Customer_Name__r.PersonOtherPhone</formula>
        <label>Second Mobile</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sending_Address__c</fullName>
        <label>Sending Address</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Home</fullName>
                </value>
                <value>
                    <fullName>Business</fullName>
                </value>
                <value>
                    <fullName>Other Address 1</fullName>
                </value>
                <value>
                    <fullName>Other Address 2</fullName>
                </value>
                <value>
                    <fullName>Other Address 3</fullName>
                </value>
                <value>
                    <fullName>Temporary</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SentName__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>/*
Created by:  Chris.Huang
Used by:  CAC User
Function: Mapping &apos;Delivery details&apos; in Data Dictionary.
Used in: Integration

Modify History
Modify By: 
Modify Reason: 
*/</description>
        <label>SentName</label>
        <referenceTo>DM_Material__c</referenceTo>
        <relationshipLabel>DM Request (SentName)</relationshipLabel>
        <relationshipName>DM_Request1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sent_Date__c</fullName>
        <inlineHelpText>The date when the deliver was ordered to the mail sender</inlineHelpText>
        <label>Sent Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status1__c</fullName>
        <label>Status1</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Open</fullName>
                </value>
                <value>
                    <fullName>Duplicate</fullName>
                </value>
                <value>
                    <fullName>to be sent</fullName>
                </value>
                <value>
                    <fullName>Failed</fullName>
                </value>
                <value>
                    <fullName>Returned</fullName>
                </value>
                <value>
                    <fullName>Success</fullName>
                </value>
                <value>
                    <fullName>Not send</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Status2__c</fullName>
        <label>Status2</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Open</fullName>
                </value>
                <value>
                    <fullName>Duplicate</fullName>
                </value>
                <value>
                    <fullName>to be sent</fullName>
                </value>
                <value>
                    <fullName>Failed</fullName>
                </value>
                <value>
                    <fullName>Returned</fullName>
                </value>
                <value>
                    <fullName>Success</fullName>
                </value>
                <value>
                    <fullName>Not send</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Status3__c</fullName>
        <label>Status3</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Open</fullName>
                </value>
                <value>
                    <fullName>Duplicate</fullName>
                </value>
                <value>
                    <fullName>to be sent</fullName>
                </value>
                <value>
                    <fullName>Failed</fullName>
                </value>
                <value>
                    <fullName>Returned</fullName>
                </value>
                <value>
                    <fullName>Success</fullName>
                </value>
                <value>
                    <fullName>Not send</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SuggestedName__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>/*
Created by:  Chris.Huang
Used by:  CAC User
Function: Mapping &apos;The referrer name&apos; in Data Dictionary.
Used in: Integration

Modify History
Modify By: 
Modify Reason: 
*/</description>
        <label>SuggestedName</label>
        <referenceTo>DM_Material__c</referenceTo>
        <relationshipLabel>DM Request (SuggestedName)</relationshipLabel>
        <relationshipName>DM_Request</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TitleOfHonor__c</fullName>
        <label>Title</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>To Person</fullName>
                    <default>true</default>
                    <label>To Person</label>
                </value>
                <value>
                    <fullName>To Company</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <formula>IF( Customer_Name__r.MD__c = &apos;TH&apos;, TEXT(Customer_Name__r.Title__c), &apos;&apos;)</formula>
        <label>Title</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>To_Be_Deleted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>To Be Deleted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Updated_By_EP_Transactions__c</fullName>
        <label>Updated By EP Transactions</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>View_By_All__c</fullName>
        <defaultValue>false</defaultValue>
        <label>View By All</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Zip_Code__c</fullName>
        <label>Zip Code</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <label>DM Request</label>
    <listViews>
        <fullName>AfterSales_Department_DM_Request</fullName>
        <filterScope>Queue</filterScope>
        <filters>
            <field>MD__c</field>
            <operation>equals</operation>
            <value>KR</value>
        </filters>
        <label>AfterSales Department</label>
        <language>en_US</language>
        <queue>AfterSales_Department</queue>
        <sharedTo>
            <roleAndSubordinatesInternal>MBK_Management</roleAndSubordinatesInternal>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Customer_Name__c</columns>
        <columns>Actual_DM_Material1__c</columns>
        <columns>Actual_DM_Material2__c</columns>
        <columns>Actual_DM_Material3__c</columns>
        <columns>Status__c</columns>
        <columns>Campaign__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinatesInternal>Central</roleAndSubordinatesInternal>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All_temp</fullName>
        <columns>NAME</columns>
        <columns>Customer_Name__c</columns>
        <columns>Actual_DM_Material1__c</columns>
        <columns>Actual_DM_Material2__c</columns>
        <columns>Actual_DM_Material3__c</columns>
        <columns>Status__c</columns>
        <columns>Campaign__c</columns>
        <columns>Created_By_EP_Transaction__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Created_By_EP_Transaction__c</field>
            <operation>notEqual</operation>
        </filters>
        <label>All_temp</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>MBJ_CRM_Department_Approver</roleAndSubordinates>
            <roleAndSubordinates>MBJ_CRM_Department_non_Approver</roleAndSubordinates>
            <roleAndSubordinates>MBJ_IT_Department</roleAndSubordinates>
            <roleAndSubordinates>Other_MBJ</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Failed_DM_Requests</fullName>
        <columns>NAME</columns>
        <columns>Status__c</columns>
        <columns>Expected_DM_Material1__c</columns>
        <columns>Expected_DM_Material2__c</columns>
        <columns>Expected_DM_Material3__c</columns>
        <columns>Comment__c</columns>
        <columns>Campaign__c</columns>
        <columns>Customer_Name__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Failed</value>
        </filters>
        <label>Failed direct-mail requests</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinatesInternal>Central</roleAndSubordinatesInternal>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>MBJ_CRM_Department_DM_Request</fullName>
        <filterScope>Queue</filterScope>
        <label>MBJ Supervisor</label>
        <language>en_US</language>
        <queue>MBJ_Supervisor</queue>
        <sharedTo>
            <roleAndSubordinates>MBJ_CRM_Department_Approver</roleAndSubordinates>
            <roleAndSubordinates>MBJ_CRM_Department_non_Approver</roleAndSubordinates>
            <roleAndSubordinates>MBJ_IT_Department</roleAndSubordinates>
            <roleAndSubordinates>Other_MBJ</roleAndSubordinates>
            <roleAndSubordinatesInternal>MBJ_IT_Department</roleAndSubordinatesInternal>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>MBJ_DM_Request</fullName>
        <filterScope>Queue</filterScope>
        <label>MBJ Supervisor</label>
        <language>en_US</language>
        <queue>MBJ_Supervisor</queue>
        <sharedTo>
            <roleAndSubordinates>MBJ_CRM_Department_Approver</roleAndSubordinates>
            <roleAndSubordinates>MBJ_CRM_Department_non_Approver</roleAndSubordinates>
            <roleAndSubordinates>MBJ_IT_Department</roleAndSubordinates>
            <roleAndSubordinates>Other_MBJ</roleAndSubordinates>
            <roleAndSubordinatesInternal>MBJ_IT_Department</roleAndSubordinatesInternal>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>MBJ_Supervisor_DM_Request</fullName>
        <filterScope>Queue</filterScope>
        <label>MBJ Supervisor</label>
        <language>en_US</language>
        <queue>MBJ_Supervisor</queue>
        <sharedTo>
            <roleAndSubordinatesInternal>MBJ_IT_Department</roleAndSubordinatesInternal>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>MBK_All</fullName>
        <columns>NAME</columns>
        <columns>Customer_Name__c</columns>
        <columns>Actual_DM_Material1__c</columns>
        <columns>Actual_DM_Material2__c</columns>
        <columns>Actual_DM_Material3__c</columns>
        <columns>Status__c</columns>
        <columns>Campaign__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>MD__c</field>
            <operation>equals</operation>
            <value>KR</value>
        </filters>
        <label>MBK All</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinatesInternal>MBK_Management</roleAndSubordinatesInternal>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>MBK_All_temp</fullName>
        <columns>NAME</columns>
        <columns>Customer_Name__c</columns>
        <columns>Actual_DM_Material1__c</columns>
        <columns>Actual_DM_Material2__c</columns>
        <columns>Actual_DM_Material3__c</columns>
        <columns>Status__c</columns>
        <columns>Campaign__c</columns>
        <columns>Created_By_EP_Transaction__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Created_By_EP_Transaction__c</field>
            <operation>notEqual</operation>
        </filters>
        <filters>
            <field>MD__c</field>
            <operation>equals</operation>
            <value>KR</value>
        </filters>
        <label>MBK All_temp</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinatesInternal>MBK_Management</roleAndSubordinatesInternal>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>MBK_Direct_request_has_been_sent</fullName>
        <columns>NAME</columns>
        <columns>Status__c</columns>
        <columns>SuggestedName__c</columns>
        <columns>SentName__c</columns>
        <columns>Expected_DM_Material1__c</columns>
        <columns>Expected_DM_Material2__c</columns>
        <columns>Expected_DM_Material3__c</columns>
        <columns>Actual_DM_Material1__c</columns>
        <columns>Actual_DM_Material2__c</columns>
        <columns>Actual_DM_Material3__c</columns>
        <columns>Sent_Date__c</columns>
        <columns>Comment__c</columns>
        <columns>Campaign__c</columns>
        <columns>Customer_Name__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>MD__c</field>
            <operation>equals</operation>
            <value>KR</value>
        </filters>
        <label>MBK Direct request has been sent</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinatesInternal>MBK_Management</roleAndSubordinatesInternal>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>MBK_Open_mail_requests</fullName>
        <columns>NAME</columns>
        <columns>Status__c</columns>
        <columns>Customer_Name__c</columns>
        <columns>Campaign__c</columns>
        <columns>SuggestedName__c</columns>
        <columns>SentName__c</columns>
        <columns>Expected_DM_Material1__c</columns>
        <columns>Expected_DM_Material2__c</columns>
        <columns>Expected_DM_Material3__c</columns>
        <columns>Comment__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Open</value>
        </filters>
        <filters>
            <field>MD__c</field>
            <operation>equals</operation>
            <value>KR</value>
        </filters>
        <label>MBK Open mail requests</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinatesInternal>MBK_Management</roleAndSubordinatesInternal>
        </sharedTo>
    </listViews>
</CustomObject>